[gd_scene load_steps=4 format=3 uid="uid://bq3mmhxy6ufj1"]

[ext_resource type="Texture2D" uid="uid://b0c6h3gp86edc" path="res://artwork/white-circle.png" id="1"]
[ext_resource type="Script" uid="uid://0s1qvmwnk7sp" path="res://scenes/Bullet/Bullet.gd" id="2"]

[sub_resource type="CircleShape2D" id="1"]
radius = 4.0

[node name="Bullet" type="Area2D" groups=["bullet"]]
script = ExtResource("2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("1")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("1")

[node name="KillTimer" type="Timer" parent="."]
wait_time = 0.6
one_shot = true
autostart = true

[connection signal="area_entered" from="." to="." method="_on_Bullet_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Bullet_body_entered"]
[connection signal="timeout" from="KillTimer" to="." method="_on_KillTimer_timeout"]
